# AntimatterDimensionsTAS

./: README.md
ADgame/public/input/instructions/: 0000 - start.json  0000.0 - start.json  0000.1 - over in 0 seconds.json  0000.2 - dimboost0.json  0001 - dimboost1.json  0001 - over in 0 seconds.json  0002 - dimboost2.json  0002 - g0d0.json  0004 - dimboost4.json  0004 - g0d2.json  0005 - dimboost5.json  0005 - g0d3.json  0006 - dimboost6.json  0006 - g0d4.json  0007 - dimboost7.json  0008 - dimboost8.json  0008 - g0d6.json  0009 - g0d7.json  0009 - galaxy1_dimboost0.json  0010 - g0d8.json  0010 - galaxy1_dimboost1.json  0011 - galaxy1_dimboost2.json  0012 - galaxy1_dimboost3.json  0014 - galaxy1_dimboost5.json  0015 - g1d4.json  0015 - galaxy1_dimboost6.json  0016 - g1d5.json  0016 - galaxy1_dimboost7.json  0017 - galaxy1_dimboost8.json  0018 - galaxy1_dimboost9.json  0019 - g1d8.json  0019 - galaxy1_dimboost10.json  0020 - g1d9.json  0020 - galaxy1_dimboost11.json  0021 - galaxy1_dimboost12.json  0022 - galaxy2_dimboost0.json  0023 - g1d12.json  0023 - galaxy2_dimboost1.json  0025 - galaxy2_dimboost3.json  0026 - g2d2.json  (+35 more)
ADgame/public/input/savestates/: 0000 - d0.txt  0000.0 - start.txt  0000.1 - over in 0 seconds.txt  0000.2 - dimboost0.txt  0001 - d1.txt  0001 - dimboost1.txt  0001 - over in 0 seconds.txt  0001.1 - d1 with over in 0s.txt  0002 - d2.txt  0002 - dimboost2.txt  0002 - g0d0.txt  0003 - d3.txt  0003 - dimboost3.txt  0003 - g0d1.txt  0004 - d4.txt  0004 - dimboost4.txt  0004 - g0d2.txt  0005 - d5.txt  0005 - dimboost5.txt  0005 - g0d3.txt  0006 - d6.txt  0006 - dimboost6.txt  0006 - g0d4.txt  0007 - d7.txt  0007 - dimboost7.txt  0007 - g0d5.txt  0008 - d8.txt  0008 - dimboost8.txt  0008 - g0d6.txt  0009 - g0d7.txt  0009 - g1 d0.txt  0009 - galaxy1_dimboost0.txt  0010 - g0d8.txt  0010 - galaxy1_dimboost1.txt  0011 - g1d0.txt  0011 - galaxy1_dimboost2.txt  0012 - g1d1.txt  0012 - galaxy1_dimboost3.txt  0013 - g1d2.txt  0013 - galaxy1_dimboost4.txt  (+54 more)
ADgame/src/: tas.js
ADgame/src/core/: globals.js
ADsimulation/: CMakeLists.txt  main  main.cpp
ADsimulation/libraries/achievements/: achievements.cpp  achievements.h
ADsimulation/libraries/constants/: constants.cpp  constants.h
ADsimulation/libraries/decimal/: decimal.cpp  decimal.h
ADsimulation/libraries/dimensions/: dimensions.cpp  dimensions.h
ADsimulation/libraries/gamestate/: gamestate.cpp  gamestate.h
ADsimulation/libraries/permutations/: permutations.cpp  permutations.h
ADsimulation/libraries/simulation/: simulation.cpp  simulation.h
ADsimulation/libraries/tickspeed/: tickspeed.cpp  tickspeed.h
ADsimulation/src/: CMakeLists.txt  main.cpp
ADsimulation/src/libraries/achievements/: achievements.cpp  achievements.h
ADsimulation/src/libraries/constants/: constants.h
ADsimulation/src/libraries/decimal/: decimal.cpp  decimal.h
ADsimulation/src/libraries/dimensions/: dimensions.cpp  dimensions.h
ADsimulation/src/libraries/gamestate/: gamestate.cpp  gamestate.h
ADsimulation/src/libraries/interfaces/: interfaces.h
ADsimulation/src/libraries/simulation/: simulation.cpp  simulation.h
ADsimulation/src/libraries/tickspeed/: tickspeed.cpp
ADsimulation/src/tests/: test.cpp
ADsimulation/tests/: test.cpp
input/instructions/: 1.txt  dimboost3.json
public/input/instructions/: dimboost0.json  dimboost1.json  dimboost2.json  dimboost3.json  dimboost4.json  dimboost5.json  dimboost6.json  dimboost7.json  dimboost8.json  galaxy1_dimboost11.json  galaxy1_dimboost2.json  galaxy1_dimboost5.json  galaxy1_dimboost6.json  galaxy1_dimboost8.json
public/input/savestates/: 0000 - d0.txt  0002 - d2.txt  0005 - d5.txt  0009 - g1 d0.txt  firstGalaxy.txt  speedrunStart.txt
src/: game.js  tas.js
src/instructions/: dimboost2.json  dimboost4.json
